fix label div overlapping zoom out button

--- a/projects/block-fractal-demo/www/style.css
+++ b/projects/block-fractal-demo/www/style.css
@@ -66,8 +66,8 @@ body {
     text-shadow: 2px 2px 2px #444;
     position: absolute;
     top: 10px;
-    left: 0px;
-    right: 0px;
+    left: 50px;
+    right: 50px;
     text-align: center;
 }
 
